Fix three-sections block spacing.

--- a/desktop.blocks/sections/__caption/sections__caption.css
+++ b/desktop.blocks/sections/__caption/sections__caption.css
@@ -3,4 +3,6 @@
 	font-family: Myriad Pro;
 	font-weight: normal;
 	font-size: 25px;
+
+	margin: 0;
 }
