--- a/desktop.blocks/sections/__text/sections__text.css
+++ b/desktop.blocks/sections/__text/sections__text.css
@@ -3,4 +3,6 @@
 	font-family: Tahoma;
 	font-size: 14px;
 	color: #4b4b4b;
+
+	margin-top: 0.5em;
 }
